chore: remove EE module from history